--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2909,39 +2909,39 @@ fieldset:disabled a.btn {
     box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.5);
 }
 
-.btn-outline-warning {
-    color: #ffc107;
-    background-color: transparent;
-    background-image: none;
-    border-color: #ffc107;
-}
+/*.btn-outline-warning {*/
+    /*color: #ffc107;*/
+    /*background-color: transparent;*/
+    /*background-image: none;*/
+    /*border-color: #ffc107;*/
+/*}*/
 
-.btn-outline-warning:hover {
-    color: #212529;
-    background-color: #ffc107;
-    border-color: #ffc107;
-}
+/*.btn-outline-warning:hover {*/
+    /*color: #212529;*/
+    /*background-color: #ffc107;*/
+    /*border-color: #ffc107;*/
+/*}*/
 
-.btn-outline-warning:focus, .btn-outline-warning.focus {
-    box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);
-}
+/*.btn-outline-warning:focus, .btn-outline-warning.focus {*/
+    /*box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);*/
+/*}*/
 
-.btn-outline-warning.disabled, .btn-outline-warning:disabled {
-    color: #ffc107;
-    background-color: transparent;
-}
+/*.btn-outline-warning.disabled, .btn-outline-warning:disabled {*/
+    /*color: #ffc107;*/
+    /*background-color: transparent;*/
+/*}*/
 
-.btn-outline-warning:not(:disabled):not(.disabled):active, .btn-outline-warning:not(:disabled):not(.disabled).active,
-.show > .btn-outline-warning.dropdown-toggle {
-    color: #212529;
-    background-color: #ffc107;
-    border-color: #ffc107;
-}
+/*.btn-outline-warning:not(:disabled):not(.disabled):active, .btn-outline-warning:not(:disabled):not(.disabled).active,*/
+/*.show > .btn-outline-warning.dropdown-toggle {*/
+    /*color: #212529;*/
+    /*background-color: #ffc107;*/
+    /*border-color: #ffc107;*/
+/*}*/
 
-.btn-outline-warning:not(:disabled):not(.disabled):active:focus, .btn-outline-warning:not(:disabled):not(.disabled).active:focus,
-.show > .btn-outline-warning.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);
-}
+/*.btn-outline-warning:not(:disabled):not(.disabled):active:focus, .btn-outline-warning:not(:disabled):not(.disabled).active:focus,*/
+/*.show > .btn-outline-warning.dropdown-toggle:focus {*/
+    /*box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);*/
+/*}*/
 
 .btn-outline-danger {
     color: #dc3545;
