--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -2519,8 +2519,8 @@ fieldset:disabled a.btn {
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #CCCDE5;
-  border-color: #868AD6;
+  background-color: rgba(195, 196, 220, 0.82);
+  border-color: rgba(106, 117, 171, 0.68);
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
@@ -2645,7 +2645,7 @@ fieldset:disabled a.btn {
 
 .btn-warning:hover {
   color: #212529;
-  border-color: #FFC0A8;
+  background-color: #FFC0A8;
   border-color: #FFC0A8;
 }
 
@@ -2654,15 +2654,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-warning.disabled, .btn-warning:disabled {
-  color: #212529;
-  border-color: #FFC0A8;
+  color: #3c434b;
+  background-color: rgba(226, 170, 151, 0.47);
   border-color: #FFC0A8;
 }
 
 .btn-warning:not(:disabled):not(.disabled):active, .btn-warning:not(:disabled):not(.disabled).active,
 .show > .btn-warning.dropdown-toggle {
   color: #212529;
-  border-color: #FFC0A8;
+  background-color: #FFC0A8;
   border-color: #FFC0A8;
 }
 
@@ -2774,37 +2774,37 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #007bff;
   background-color: transparent;
   background-image: none;
-  border-color: #007bff;
+  color: #868AD6;
+  border-color: #868AD6;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #868AD6;
+  border-color: #868AD6;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+  box-shadow: 0 0 0 0.1rem rgba(69, 38, 130, 0.5);
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #007bff;
+  color: #868AD6;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #868AD6;
+  border-color: #868AD6;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+  box-shadow: 0 0 0 0.1rem rgba(69, 38, 130, 0.5);
 }
 
 .btn-outline-secondary {
@@ -2910,37 +2910,37 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-warning {
-  color: #ffc107;
   background-color: transparent;
   background-image: none;
-  border-color: #ffc107;
+  color: #212529;
+  border-color: #FFC0A8;
 }
 
 .btn-outline-warning:hover {
   color: #212529;
-  background-color: #ffc107;
-  border-color: #ffc107;
+  background-color: #FFC0A8;
+  border-color: #FFC0A8;
 }
 
 .btn-outline-warning:focus, .btn-outline-warning.focus {
-  box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255, 192, 168, 0.5);
 }
 
 .btn-outline-warning.disabled, .btn-outline-warning:disabled {
-  color: #ffc107;
+  color: #5b6570;
   background-color: transparent;
 }
 
 .btn-outline-warning:not(:disabled):not(.disabled):active, .btn-outline-warning:not(:disabled):not(.disabled).active,
 .show > .btn-outline-warning.dropdown-toggle {
   color: #212529;
-  background-color: #ffc107;
-  border-color: #ffc107;
+  background-color: #FFC0A8;
+  border-color: #FFC0A8;
 }
 
 .btn-outline-warning:not(:disabled):not(.disabled):active:focus, .btn-outline-warning:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-warning.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255, 192, 168, 0.5);
 }
 
 .btn-outline-danger {
