--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -66,15 +66,15 @@
 }
 
 .card-blue {
-    border-top: 4px solid #3498db;
+    border-top: 4px solid #A2A6E5;
 }
 .card-blue :before {
-    color: #3498db;
+    color: #A2A6E5;
     content: "\f0f5";
     font-family: 'FontAwesome';
 }
 .card-blue .card-separator {
-    border: 1px solid #3498db;
+    border: 1px solid #A2A6E5;
 }
 .col-sx-3{
     margin-left: 5px;
