--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3269,7 +3269,7 @@ tbody.collapse.show {
     padding: 0.25rem 1.5rem;
     clear: both;
     font-weight: 400;
-    color: #212529;
+    color: #2f3c4f;
     text-align: inherit;
     white-space: nowrap;
     background-color: transparent;
@@ -3277,7 +3277,7 @@ tbody.collapse.show {
 }
 
 .dropdown-item:hover, .dropdown-item:focus {
-    color: #16181b;
+    color: #445e83;
     text-decoration: none;
     background-color: #f8f9fa;
 }
